--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,4 +1,5 @@
 .main {
+  position: relative;
   display: flex;
   grid-area: main;
   transition:
@@ -25,9 +26,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .main {
-    padding-bottom: env(safe-area-inset-bottom) !important;
-  }
   .settings-modal {
     top: 8%;
     width: 95%;
